; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/cpufreq/extr_p4tcc.c_p4tcc_identify.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/cpufreq/extr_p4tcc.c_p4tcc_identify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_feature = common dso_local global i32 0, align 4
@CPUID_ACPI = common dso_local global i32 0, align 4
@CPUID_TM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"p4tcc\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"add p4tcc child failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @p4tcc_identify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @p4tcc_identify(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @cpu_feature, align 4
  %6 = load i32, i32* @CPUID_ACPI, align 4
  %7 = load i32, i32* @CPUID_TM, align 4
  %8 = or i32 %6, %7
  %9 = and i32 %5, %8
  %10 = load i32, i32* @CPUID_ACPI, align 4
  %11 = load i32, i32* @CPUID_TM, align 4
  %12 = or i32 %10, %11
  %13 = icmp ne i32 %9, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %27

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = call i32* @device_find_child(i32 %16, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 -1)
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  br label %27

20:                                               ; preds = %15
  %21 = load i32, i32* %4, align 4
  %22 = call i32* @BUS_ADD_CHILD(i32 %21, i32 10, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 -1)
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @device_printf(i32 %25, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  br label %27

27:                                               ; preds = %14, %19, %24, %20
  ret void
}

declare dso_local i32* @device_find_child(i32, i8*, i32) #1

declare dso_local i32* @BUS_ADD_CHILD(i32, i32, i8*, i32) #1

declare dso_local i32 @device_printf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
